Apply the Rust license

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "One config file to generate them all."
 repository = "https://github.com/clebert/onecfg-rust"
 readme = "README.md"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 keywords = ["config"]
 categories = ["command-line-utilities"]
 edition = "2021"
