--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,5 @@ clap = { version = "4.1", features = ["derive", "wrap_help"] }
 reqwest = { version = "0.11", features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 toml = "0.6"
