--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,4 +28,5 @@ reqwest = { version = "0.11", features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
+thiserror = "1.0"
 toml = "0.6"
