--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ doc = false
 [dependencies]
 anyhow = "1.0"
 clap = { version = "4.1", features = ["derive", "wrap_help"] }
+indexmap = { version = "1.9", features = ["serde"] }
 reqwest = { version = "0.11", features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
