--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,2 +1,7 @@
+edition = "2021"
+match_block_trailing_comma = true
 max_width = 120
+newline_style = "Unix"
+use_field_init_shorthand = true
 use_small_heuristics = "Max"
+use_try_shorthand = true
