--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 jobs:
-  ci:
+  CI:
     env:
       CARGO_TERM_COLOR: always
     runs-on: ubuntu-latest
@@ -14,5 +14,5 @@ jobs:
     - run: cargo clippy --all-targets --all-features
 name: CI
 on:
-- push
-- pull_request
+  pull_request: {}
+  push: {}
