--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,7 +1,8 @@
 edition = "2021"
 match_block_trailing_comma = true
-max_width = 120
+max_width = 80
 newline_style = "Unix"
+tab_spaces = 2
 use_field_init_shorthand = true
 use_small_heuristics = "Max"
 use_try_shorthand = true
